<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="218dp"
        android:layout_height="76dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="?attr/colorPrimary"
        android:drawableTop="@drawable/ic_baseline_speed_40"
        android:onClick="openGPS"
        android:text="@string/start"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/limit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="214dp"
        android:layout_height="78dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="?attr/colorPrimary"
        android:drawableTop="@drawable/ic_baseline_history_40"
        android:text="@string/history"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/mic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_button" />

    <Button
        android:id="@+id/limit_button"
        android:layout_width="210dp"
        android:layout_height="78dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="?attr/colorPrimary"
        android:drawableTop="@drawable/ic_baseline_warning_40"
        android:text="@string/limit"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/history_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="?attr/colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/mic"
        android:tint="@color/white"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_baseline_mic_40"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="309dp"
        android:text="@string/default_speed"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mic_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="17dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/mic"
        android:onClick="recognise"
        android:tint="@color/white"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_help_40"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>